@@ -1,3 +1,8 @@
+2007-06-05  Eitan Isaacson  <eitan@ascender.com>
+
+	* src/lib/accerciser/accessible_treeview.py: Decouple children
+	node loading (bug 441013).
+
 2007-06-04  Eitan Isaacson  <eitan@ascender.com>
 
 	* plugins/interface_view.py: Scroll a focused expander
